# pqc-binary-format

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LINKEDIN_ARTICLE.md  PUBLISHING.md  README.md  SOCIAL_MEDIA_POSTS.md  TEST_RESULTS_v1.0.4.md  TEST_VERIFICATION.md  TRUSTED_PUBLISHER_SETUP.md  TRUSTED_PUBLISHER_SETUP_CORRECTED.md  cbindgen.toml  deny.toml  pyproject.toml
.github/workflows/: cargo-deny.yml  ci.yml  codeql.yml  ossf-scorecard.yml  publish-npm.yml  publish-python.yml  publish.yml  release-please.yml  release.yml  release.yml.disabled  secret-scan.yml  stale.yml
benches/: format_benchmarks.rs
bindings/c-cpp/: Makefile  README.md  example.cpp
bindings/go/: README.md  example.go  format.go  format_test.go  go.mod  pqc_binary_format.go
bindings/go/examples/: example.go
bindings/javascript/: README.md  example.js  package.json
bindings/python/: README.md  example.py  setup.py
docs/: algorithms.md
examples/: README.md  algorithm_comparison.rs  basic_usage.rs  with_compression.rs
examples/c/: basic_usage.c
examples/cpp/: basic_usage.cpp
examples/go/: basic_usage.go  go.mod
examples/javascript/: basic_usage.js
examples/python/: algorithm_comparison.py  basic_usage.py
include/: pqc_binary_format.h
pr/: DISTRIBUTION_GUIDE.md  PRESS_RELEASE_v1.0_LAUNCH.md
src/: algorithm.rs  error.rs  ffi.rs  format.rs  lib.rs  metadata.rs  python.rs  wasm.rs
