[package]
name = "pqc-binary-format"
version = "2.0.2"
edition = "2021"
rust-version = "1.75"
authors = ["Allan <allan@pqcrypta.com>"]
license = "MIT OR Apache-2.0"
description = "Standardized binary format for post-quantum cryptography encrypted data interchange"
repository = "https://github.com/PQCrypta/pqc-binary-format"
homepage = "https://pqcrypta.com"
documentation = "https://docs.rs/pqc-binary-format"
readme = "README.md"
keywords = ["cryptography", "post-quantum", "pqc", "encryption", "binary-format"]
categories = ["cryptography", "encoding", "no-std"]
exclude = [".github/", "target/"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
# Metadata is a UTF-8 JSON object per the PQC Binary Format specification
# (draft-riddel-pqc-binary-format-00, Section 5). serde_json's Map is a BTreeMap
# (preserve_order disabled) so object keys serialize in sorted order, giving the
# deterministic metadata encoding the checksum requires.
serde_json = "1.0"
# Byte-valued metadata fields (IV, tag, keys, ciphertext) are base64-encoded
# inside the JSON object so the section stays valid UTF-8.
base64 = "0.22"

# Hashing for checksums
sha2 = "0.10"

# Error handling
thiserror = "1.0"

# Python bindings (optional)
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

# WebAssembly bindings (optional)
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = []
python = ["pyo3"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "js-sys"]

[dev-dependencies]
# Testing
criterion = "0.5"
proptest = { version = "1.4", default-features = false, features = ["std"] }
hex = "0.4"

[[bench]]
name = "format_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true

[package.metadata.docs.rs]
# Ensure docs.rs builds with all features and proper targets
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]
