[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pqc_binary_format"
version = "2.0.2"
description = "Standardized binary format for post-quantum cryptography encrypted data interchange"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Allan", email = "allan@pqcrypta.com"}
]
keywords = ["cryptography", "post-quantum", "pqc", "encryption", "binary-format"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://pqcrypta.com"
Repository = "https://github.com/PQCrypta/pqcrypta-community"
Documentation = "https://docs.rs/pqc-binary-format"

[tool.maturin]
module-name = "pqc_binary_format"
bindings = "pyo3"
features = ["python"]
